# aiogram_template

./: README.md  alembic.ini  bot.ini.example  bot.py  pyproject.toml  requirements.txt
tgbot/: config.py
tgbot/callback_data/: callback_datas.py
tgbot/data/: data.py
tgbot/db/: factory.py
tgbot/db/dao/: holder.py
tgbot/db/dao/rdb/: __init__.py  base.py  user.py
tgbot/db/models/: __init__.py  user.py
tgbot/handlers/: admin.py  user.py
tgbot/handlers/commands/: __init__.py  start.py
tgbot/handlers/query_handlers/: __init__.py  language_handler.py
tgbot/keyboards/inline/: language.py
tgbot/locales/: messages.pot
tgbot/locales/ru/LC_MESSAGES/: messages.mo  messages.po
tgbot/locales/uz/LC_MESSAGES/: messages.mo  messages.po
tgbot/middlewares/: __init__.py  db.py  language.py
tgbot/misc/: req_func.py
tgbot/models/: __init__.py  base.py  user.py
tgbot/models/migrations/: env.py
tgbot/models/migrations/versions/: 428830fbbe97_init.py  89970ded3aa2_init.py
tgbot/service/repo/: base_repo.py  repository.py  user_repo.py
